--- a/docs/docs-ref-autogen/excel/excel/excel.chartareaformat.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartareaformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartAreaFormat:class'
     summary: |-
-      <span data-ttu-id="184c9-101">封装整个图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-101">Encapsulates the format properties for the overall chart area.</span></span>
+      封装整个图表区域的格式属性。
 
-      <span data-ttu-id="184c9-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartAreaFormat
     fullName: Excel.ChartAreaFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAreaFormat#border:member'
@@ -28,9 +28,9 @@ items:
       - 'excel!Excel.ChartAreaFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartAreaFormat#border:member'
     summary: |-
-      <span data-ttu-id="184c9-103">代表图表区域的边框格式，包括颜色、linestyle 和粗细。</span><span class="sxs-lookup"><span data-stu-id="184c9-103">Represents the border format of chart area, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="184c9-104">只读。</span><span class="sxs-lookup"><span data-stu-id="184c9-104">Read-only.</span></span>
+      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="184c9-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -43,9 +43,9 @@ items:
           - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartAreaFormat#colorScheme:member'
     summary: |-
-      <span data-ttu-id="184c9-106">返回或设置图表的配色方案。</span><span class="sxs-lookup"><span data-stu-id="184c9-106">Returns or sets color scheme of the chart.</span></span> <span data-ttu-id="184c9-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="184c9-107">Read/Write.</span></span>
+      指定图表的配色方案。
 
-      <span data-ttu-id="184c9-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: colorScheme
     fullName: colorScheme
     langs:
@@ -57,7 +57,7 @@ items:
         type:
           - 'excel!Excel.ChartAreaFormat#colorScheme~0:complex'
   - uid: 'excel!Excel.ChartAreaFormat#context:member'
-    summary: <span data-ttu-id="184c9-109">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="184c9-109">The request context associated with the object.</span></span> <span data-ttu-id="184c9-110">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="184c9-110">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -70,9 +70,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAreaFormat#fill:member'
     summary: |-
-      <span data-ttu-id="184c9-111">表示对象的填充格式，包括背景格式信息。</span><span class="sxs-lookup"><span data-stu-id="184c9-111">Represents the fill format of an object, which includes background formatting information.</span></span> <span data-ttu-id="184c9-112">只读。</span><span class="sxs-lookup"><span data-stu-id="184c9-112">Read-only.</span></span>
+      表示对象的填充格式，包括背景格式信息。
 
-      <span data-ttu-id="184c9-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -85,9 +85,9 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAreaFormat#font:member'
     summary: |-
-      <span data-ttu-id="184c9-114">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="184c9-114">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span> <span data-ttu-id="184c9-115">只读。</span><span class="sxs-lookup"><span data-stu-id="184c9-115">Read-only.</span></span>
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="184c9-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -99,7 +99,7 @@ items:
         type:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(1)'
-    summary: <span data-ttu-id="184c9-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="184c9-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="184c9-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -113,11 +113,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="184c9-119">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="184c9-119">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(2)'
-    summary: <span data-ttu-id="184c9-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="184c9-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="184c9-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -131,11 +131,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="184c9-122">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-122">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(3)'
-    summary: <span data-ttu-id="184c9-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="184c9-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="184c9-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -153,7 +153,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="184c9-125">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-125">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -162,9 +162,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartAreaFormat#roundedCorners:member'
     summary: |-
-      <span data-ttu-id="184c9-126">指定图表的图表区域是否有圆角。</span><span class="sxs-lookup"><span data-stu-id="184c9-126">Specifies whether or not chart area of the chart has rounded corners.</span></span> <span data-ttu-id="184c9-127">读/写。</span><span class="sxs-lookup"><span data-stu-id="184c9-127">Read/Write.</span></span>
+      指定图表的图表区是否有圆角。
 
-      <span data-ttu-id="184c9-128">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="184c9-128">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: roundedCorners
     fullName: roundedCorners
     langs:
@@ -176,9 +176,9 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartAreaFormat#set:member(1)'
-    summary: '<span data-ttu-id="184c9-129">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-129">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="184c9-130">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="184c9-130">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="184c9-131">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="184c9-131">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartAreaFormat): void`
     name: 'set(properties, options)'
@@ -194,15 +194,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="184c9-132">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-132">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="184c9-133">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="184c9-133">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAreaFormat#set:member(2)'
-    summary: '<span data-ttu-id="184c9-134">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="184c9-134">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -220,7 +220,7 @@ items:
           type:
             - 'excel!Excel.ChartAreaFormat:class'
   - uid: 'excel!Excel.ChartAreaFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="184c9-135">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="184c9-135">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="184c9-136">.</span><span class="sxs-lookup"><span data-stu-id="184c9-136"></span></span> <span data-ttu-id="184c9-137">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="184c9-137"></span></span><!-- --><span data-ttu-id="184c9-138">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAreaFormatData`</span><span class="sxs-lookup"><span data-stu-id="184c9-138">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartAreaFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartAreaFormatData`</span></span><!-- --><span data-ttu-id="184c9-139">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="184c9-139">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAreaFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -233,7 +233,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -258,7 +258,7 @@ references:
     name: Excel.Interfaces.ChartAreaFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
     name: Interfaces.ChartAreaFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
     name: Excel.Interfaces.ChartAreaFormatData
