--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeviewcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.rangeviewcollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="344ea-101">表示一组 RangeView 对象。</span><span class="sxs-lookup"><span data-stu-id="344ea-101">Represents a collection of RangeView objects.</span></span>
+      表示一组 RangeView 对象。
 
-      <span data-ttu-id="344ea-102">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.RangeViewCollectionLoadOptions
     fullName: Excel.Interfaces.RangeViewCollectionLoadOptions
     langs:
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#values:member'
       - 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#valueTypes:member'
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="344ea-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="344ea-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="344ea-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="344ea-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="344ea-105">).</span><span class="sxs-lookup"><span data-stu-id="344ea-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -38,9 +38,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#cellAddresses:member'
     summary: |-
-      <span data-ttu-id="344ea-106">对于集合中的每一项：代表 RangeView 的单元格地址。</span><span class="sxs-lookup"><span data-stu-id="344ea-106">For EACH ITEM in the collection: Represents the cell addresses of the RangeView.</span></span> <span data-ttu-id="344ea-107">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-107">Read-only.</span></span>
+      对于集合中的每一项：代表 RangeView 的单元格地址。
 
-      <span data-ttu-id="344ea-108">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-108">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellAddresses
     fullName: cellAddresses
     langs:
@@ -53,9 +53,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#columnCount:member'
     summary: |-
-      <span data-ttu-id="344ea-109">对于集合中的每一项：返回可见列的数量。</span><span class="sxs-lookup"><span data-stu-id="344ea-109">For EACH ITEM in the collection: Returns the number of visible columns.</span></span> <span data-ttu-id="344ea-110">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-110">Read-only.</span></span>
+      对于集合中的每一项：可见列的数量。
 
-      <span data-ttu-id="344ea-111">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
     fullName: columnCount
     langs:
@@ -68,9 +68,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#formulas:member'
     summary: |-
-      <span data-ttu-id="344ea-112">对于集合中的每一项：代表 A1 样式表示法中的公式。</span><span class="sxs-lookup"><span data-stu-id="344ea-112">For EACH ITEM in the collection: Represents the formula in A1-style notation.</span></span>
+      对于集合中的每一项：代表 A1 样式表示法中的公式。
 
-      <span data-ttu-id="344ea-113">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulas
     fullName: formulas
     langs:
@@ -83,9 +83,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#formulasLocal:member'
     summary: |-
-      <span data-ttu-id="344ea-114">对于集合中的每一项：代表 A1 样式表示法中的公式，位于用户的语言和数字格式设置区域中。</span><span class="sxs-lookup"><span data-stu-id="344ea-114">For EACH ITEM in the collection: Represents the formula in A1-style notation, in the user's language and number-formatting locale.</span></span> <span data-ttu-id="344ea-115">例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中将变为 "=SUMME(A1; 1,5)"。</span><span class="sxs-lookup"><span data-stu-id="344ea-115">For example, the English "=SUM(A1, 1.5)" formula would become "=SUMME(A1; 1,5)" in German.</span></span>
+      对于集合中的每一项：代表 A1 样式表示法中的公式，位于用户的语言和数字格式设置区域中。 例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中将变为 "=SUMME(A1; 1,5)"。
 
-      <span data-ttu-id="344ea-116">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasLocal
     fullName: formulasLocal
     langs:
@@ -98,9 +98,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#formulasR1C1:member'
     summary: |-
-      <span data-ttu-id="344ea-117">对于集合中的每一项：以 R1C1 样式表示法表示的公式。</span><span class="sxs-lookup"><span data-stu-id="344ea-117">For EACH ITEM in the collection: Represents the formula in R1C1-style notation.</span></span>
+      对于集合中的每一项：以 R1C1 样式表示法表示的公式。
 
-      <span data-ttu-id="344ea-118">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-118">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
     fullName: formulasR1C1
     langs:
@@ -113,9 +113,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="344ea-119">对于集合中的每一项：返回一个值，该值表示 RangeView 的索引。</span><span class="sxs-lookup"><span data-stu-id="344ea-119">For EACH ITEM in the collection: Returns a value that represents the index of the RangeView.</span></span> <span data-ttu-id="344ea-120">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-120">Read-only.</span></span>
+      对于集合中的每一项：返回一个值，该值表示 RangeView 的索引。
 
-      <span data-ttu-id="344ea-121">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-121">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -128,9 +128,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#numberFormat:member'
     summary: |-
-      <span data-ttu-id="344ea-122">对于集合中的每一项：代表给定单元格的 Excel 数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="344ea-122">For EACH ITEM in the collection: Represents Excel's number format code for the given cell.</span></span>
+      对于集合中的每一项：代表给定单元格的 Excel 数字格式代码。
 
-      <span data-ttu-id="344ea-123">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-123">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -143,9 +143,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#rowCount:member'
     summary: |-
-      <span data-ttu-id="344ea-124">对于集合中的每一项：返回可见行的数目。</span><span class="sxs-lookup"><span data-stu-id="344ea-124">For EACH ITEM in the collection: Returns the number of visible rows.</span></span> <span data-ttu-id="344ea-125">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-125">Read-only.</span></span>
+      对于集合中的每一项：可见行的数目。
 
-      <span data-ttu-id="344ea-126">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-126">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
     fullName: rowCount
     langs:
@@ -158,9 +158,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="344ea-127">对于集合中的每一项：指定区域的文本值。</span><span class="sxs-lookup"><span data-stu-id="344ea-127">For EACH ITEM in the collection: Text values of the specified range.</span></span> <span data-ttu-id="344ea-128">文本值与单元格宽度无关。</span><span class="sxs-lookup"><span data-stu-id="344ea-128">The Text value will not depend on the cell width.</span></span> <span data-ttu-id="344ea-129">Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。</span><span class="sxs-lookup"><span data-stu-id="344ea-129">The \# sign substitution that happens in Excel UI will not affect the text value returned by the API.</span></span> <span data-ttu-id="344ea-130">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-130">Read-only.</span></span>
+      对于集合中的每一项：指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
-      <span data-ttu-id="344ea-131">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-131">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -173,9 +173,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="344ea-132">对于集合中的每一项：代表指定区域视图的原始值。</span><span class="sxs-lookup"><span data-stu-id="344ea-132">For EACH ITEM in the collection: Represents the raw values of the specified range view.</span></span> <span data-ttu-id="344ea-133">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="344ea-133">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="344ea-134">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="344ea-134">Cells that contain an error will return the error string.</span></span>
+      对于集合中的每一项：代表指定区域视图的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="344ea-135">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-135">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
@@ -188,9 +188,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeViewCollectionLoadOptions#valueTypes:member'
     summary: |-
-      <span data-ttu-id="344ea-136">对于集合中的每一项：代表每个单元格的数据类型。</span><span class="sxs-lookup"><span data-stu-id="344ea-136">For EACH ITEM in the collection: Represents the type of data of each cell.</span></span> <span data-ttu-id="344ea-137">只读。</span><span class="sxs-lookup"><span data-stu-id="344ea-137">Read-only.</span></span>
+      对于集合中的每一项：代表每个单元格的数据类型。
 
-      <span data-ttu-id="344ea-138">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="344ea-138">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
     fullName: valueTypes
     langs:
